Fix sidebar spacing

--- a/style.css
+++ b/style.css
@@ -201,7 +201,6 @@ body {
     height: 200vh;
     position: absolute;
     z-index: 120;
-    top: 0;
     right: 100%;
     -webkit-transform: translate(0, 0);
     -ms-transform: translate(0, 0);
